Fix image alignment in about-me

--- a/_sass/_about-me.sass
+++ b/_sass/_about-me.sass
@@ -4,14 +4,18 @@
   text-align: center
 
   #bio
-    display: flex
-    flex-wrap: wrap
     margin-top: 10%
+    width: 100%
 
     #bio-img
-      display: flex
-      flex-wrap: wrap
+      display: inline-block
+      float: left
+      margin-right: 5%
+      text-align: left
 
     #bio-p
-      display: flex
-      flex-wrap: wrap
+      //display: flex
+      //flex-wrap: wrap
+      //order: 2
+      text-align: left
+      vertical-align: text-top
